pod-envoy.yml
apiVersion: v1
kind: Pod
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  volumes:
  - name: config-volume
    configMap:
      name: envoy
  containers:
  - name: ubuntu
    image: ubuntu:latest
    securityContext:
      privileged: true
    command:
    - sleep
    - "1000000"
  - name: envoy
    image: envoyproxy/envoy:v1.10.0
    volumeMounts:
    - name: config-volume
      mountPath: /etc/envoy
    args:
    - "-l"
    - "debug"
    - "-c"
    - "/etc/envoy/envoy.yaml"
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
